--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
             </form>
             <div id="quantityResult" class="result"></div>
         </div>
+        <div class="calculator">
+            <h2>Other Calculators</h2>
+            <div>
+                <h5><a href="./Offers Cal/OffersCal.html"><span class="tagname">New</span> Discount Calculator</a></h5>
+            </div>
+        </div>
         <h5>Designed and Developed by Sourav Chhimpa</h5>
         <h6>Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank">@sourav-chhimpa</a></h6>
     </div>
