UI updates in index page

--- a/Offers Cal/OffersCal.html
+++ b/Offers Cal/OffersCal.html
@@ -24,7 +24,9 @@
             </form>
             <div id="discountResult" class="result"></div>
         </div>
-        <h5><a href="./../index.html">Home</a></h5>
+        <div class="calculator">
+            <h5><a href="./../index.html">Home</a></h5>
+        </div>
         <h5>Designed and Developed by Sourav Chhimpa</h5>
         <h6>Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank">@sourav-chhimpa</a></h6>
     </div>
