--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <div class="container">
         <h1>Veggie Smart</h1>
         <div class="calculator">
+            <h2>All Calculators</h2>
+            <div>
+                <h5><a href="#totalprice"><span class="tagname">New</span> Calculate Total Price</a></h5>
+                <h5><a href="#priceperkg"><span class="tagname">New</span> Calculate Price per Kg</a></h5>
+                <h5><a href="#Calquntity"><span class="tagname">New</span> Calculate Quantity</a></h5>
+                <h5><a href="./Offers Cal/OffersCal.html"><span class="tagname">New</span> Discount Calculator</a></h5>
+            </div>
+        </div>
+        <div id="totalprice" class="calculator">
             <h2>Calculate Total Price</h2>
             <form id="priceForm">
                 <div class="form-group">
@@ -27,7 +36,7 @@
             <div id="totalResult" class="result"></div>
         </div>
 
-        <div class="calculator">
+        <div id="priceperkg" class="calculator">
             <h2>Calculate Price per Kg</h2>
             <form id="perKgForm">
                 <div class="form-group">
@@ -45,7 +54,7 @@
             <div id="perKgResult" class="result"></div>
         </div>
 
-        <div class="calculator">
+        <div id="Calquntity" class="calculator">
             <h2>Calculate Quantity</h2>
             <form id="quantityForm">
                 <div class="form-group">
@@ -59,12 +68,6 @@
                 <button type="button" onclick="calculateQuantity()">Calculate Quantity</button>
             </form>
             <div id="quantityResult" class="result"></div>
-        </div>
-        <div class="calculator">
-            <h2>Other Calculators</h2>
-            <div>
-                <h5><a href="./Offers Cal/OffersCal.html"><span class="tagname">New</span> Discount Calculator</a></h5>
-            </div>
         </div>
         <h5>Designed and Developed by Sourav Chhimpa</h5>
         <h6>Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank">@sourav-chhimpa</a></h6>
