--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
                 <h5><a href="#priceperkg"><span class="tagname">New</span> Calculate Price per Kg</a></h5>
                 <h5><a href="#Calquntity"><span class="tagname">New</span> Calculate Quantity</a></h5>
                 <h5><a href="./Offers Cal/OffersCal.html"><span class="tagname">New</span> Discount Calculator</a></h5>
-            </div>
+                <h5><a href="./NutritionCal/NutritionCal.html"><span class="tagname">Beta</span> Nutrition Calculator</a></h5>
+            </div>                
         </div>
         <div id="totalprice" class="calculator">
             <h2>Calculate Total Price</h2>
