--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h5><a href="#Calquntity"><span class="tagname">New</span> Calculate Quantity</a></h5>
                 <h5><a href="./Offers Cal/OffersCal.html"><span class="tagname">New</span> Discount Calculator</a></h5>
                 <h5><a href="./NutritionCal/NutritionCal.html"><span class="tagname">Beta</span> Nutrition Calculator</a></h5>
-                <h5><a href="./NutritionCal/NutritionCal.html"><span class="tagname">Beta</span> Recipe Cost Calculator</a></h5>
+                <h5><a href="./Recipe Cost Calculator/RecipeCostCalculator.html"><span class="tagname">Beta</span> Recipe Cost Calculator</a></h5>
             </div>                
         </div>
         <div id="totalprice" class="calculator">
