--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                 <h5><a href="./Offers Cal/OffersCal.html"><span class="tagname">New</span> Discount Calculator</a></h5>
                 <h5><a href="./NutritionCal/NutritionCal.html"><span class="tagname">Beta</span> Nutrition Calculator</a></h5>
                 <h5><a href="./Recipe Cost Calculator/RecipeCostCalculator.html"><span class="tagname">Beta</span> Recipe Cost Calculator</a></h5>
+                <h5><a href="./Land Measurement Calculator/LandMeasurementCalculator.html"><span class="tagname">Beta</span> Land Measurement Tool</a></h5>
             </div>                
         </div>
         <h5>Designed and Developed by Sourav Chhimpa</h5>
