--- a/Land Measurement Calculator/LandMeasurementCalculator.html
+++ b/Land Measurement Calculator/LandMeasurementCalculator.html
@@ -40,14 +40,14 @@
         <!-- Search Box -->
         <input type="text" id="searchBox" placeholder="Search for a place" class="w-full p-2 mb-4 text-black rounded">
 
-        <!-- Map Container -->
-        <div id="map"></div>
-
         <!-- Satellite View Checkbox -->
-        <label class="block mb-2">
+        <label class="block mb-2 text-center border border-purple-400 rounded-xl hover:bg-purple-300 duration-700">
             <input type="checkbox" id="satelliteView" class="mr-2 leading-tight">
             <span class="text-sm">Satellite View</span>
         </label>
+        <!-- Map Container -->
+        <div id="map"></div>
+
 
         <!-- Calculate Button -->
         <button onclick="calculateArea()" class="w-full p-2 mt-4 bg-green-600 rounded hover:bg-green-700">Calculate Area</button>
