--- a/Land Measurement Calculator/LandMeasurementCalculator.html
+++ b/Land Measurement Calculator/LandMeasurementCalculator.html
@@ -21,6 +21,9 @@
             color: white;
             margin-bottom: 15px;
         }
+        .leaflet-control-geocoder {
+            color: black;
+        }
     </style>
 </head>
 <body class="bg-gray-900 text-white">
