--- a/Land Measurement Calculator/LandMeasurementCalculator.html
+++ b/Land Measurement Calculator/LandMeasurementCalculator.html
@@ -39,6 +39,10 @@
                 <li>Use the search box to find a specific location.</li>
             </ul>
         </div>
+        <div id="instructions" style="background-color: rgba(255, 0, 0, 0.169);">
+            <h2 class="text-xl font-semibold mb-4"><span class="text-red-400">Note:</span> Beta Version Disclaimer</h2>
+            <p class="text-sm">This Land Measurement Tool is currently in beta and may not provide 100% accurate measurements. Use it for general reference and consult professional surveys for precise measurements.</p>
+        </div>
 
         <!-- Search Box -->
         <input type="text" id="searchBox" placeholder="Search for a place" class="w-full p-2 mb-4 text-black rounded">
