UI Update worked on the index page ui

--- a/index.html
+++ b/index.html
@@ -31,7 +31,16 @@
 </head>
 <body>
     <div class="container">
-        <h1>Veggie Smart</h1>
+        <header class="header">
+            <h1>Veggie Smart</h1>
+            <a href="https://bit.ly/Souravhere" target="_blank">
+                <div>
+                    <dfn> <abbr title="Know About Sourav Chhimpa">
+                     <img src="https://i.pinimg.com/564x/8d/e8/02/8de8027a3ffd2d16d827d145ea1d1908.jpg" alt="">
+                 </abbr></dfn>
+                 </div>
+            </a>
+        </header>
         <!-- <div class="calculator">
             <h2>All Calculators</h2>
             <div>
