--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 </head>
 <body>
     <div class="calculator note">
-        <h3>This web page is under construction</h3>
-        <p>This page is currently under construction. We apologize for any inconvenience this may cause and appreciate your patience as we work to bring you a better experience.</p>
+        <h3>We're Building Something Amazing!</h3>
+        <p>Thank you for visiting our website. We're currently under construction, working hard to create something truly special. Please check back soon for updates.</p>
     </div>
     <div class="container">
         <header class="header">
@@ -60,7 +60,7 @@
             </div>                
         </div> -->
         <div class="calculator">
-            <h2>Market Calculators</h2>
+            <h2>Market Pro Calculators</h2>
             <div class="btn-container">
                 <a href="">
                     <div class="calbtn">
@@ -106,6 +106,11 @@
                         </div>
                     </div>
                 </a>
+            </div>
+        </div>
+        <div class="calculator">
+            <h2>Food Calculators</h2>
+            <div id="FoodCalculators" class="btn-container">
             </div>
         </div>
         <div id="totalprice" class="calculator">
@@ -175,5 +180,6 @@
         <h6>Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank">@sourav-chhimpa</a></h6>
     </div>
     <script src="./scripts/scripts.js"></script>
+    <script src="./scripts/linksadd.js"></script>
 </body>
 </html>
