UI updated and Note added

--- a/NutritionCal/NutritionCal.html
+++ b/NutritionCal/NutritionCal.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <div class="container">
+        <div class="calculator note">
+            <h3>Welcome to Our Nutrition Calculator Beta Version</h3>
+            <p>Thank you for trying out our Nutrition Calculator beta version! This tool provides valuable insights into the nutritional value of your food choices. Please note that our beta version is currently limited and may undergo updates based on user feedback and the quality of data available.</p>
+        </div>
         <h1>Veggie Smart</h1>
         <div class="calculator">
             <h2>Nutrition Calculator</h2>
