--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             </form>
             <div id="quantityResult" class="result"></div>
         </div>
-        <div class="calculator">
+        <!-- <div class="calculator">
             <h2>Other Calculators</h2>
             <div>
                 <h5><a href="./Offers Cal/OffersCal.html"><span class="tagname">New</span> Discount Calculator</a></h5>
@@ -175,7 +175,7 @@
                 <h5><a href="./Recipe Cost Calculator/RecipeCostCalculator.html"><span class="tagname">Beta</span> Recipe Cost Calculator</a></h5>
                 <h5><a href="./Land Measurement Calculator/LandMeasurementCalculator.html"><span class="tagname">Beta</span> Land Measurement Tool</a></h5>
             </div>                
-        </div>
+        </div> -->
         <h5>Designed and Developed by Sourav Chhimpa</h5>
         <h6>Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank">@sourav-chhimpa</a></h6>
     </div>
