--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
             <div id="FoodCalculators" class="btn-container">
             </div>
         </div>
+        <div class="calculator">
+            <h2> Health Calculators</h2>
+            <div id="HealthCal" class="btn-container">
+            </div>
+        </div>
         <div id="totalprice" class="calculator">
             <h2>Calculate Total Price</h2>
             <form id="priceForm">
@@ -167,7 +172,7 @@
             </form>
             <div id="quantityResult" class="result"></div>
         </div>
-        <!-- <div class="calculator">
+        <div class="calculator">
             <h2>Other Calculators</h2>
             <div>
                 <h5><a href="./Offers Cal/OffersCal.html"><span class="tagname">New</span> Discount Calculator</a></h5>
@@ -175,7 +180,7 @@
                 <h5><a href="./Recipe Cost Calculator/RecipeCostCalculator.html"><span class="tagname">Beta</span> Recipe Cost Calculator</a></h5>
                 <h5><a href="./Land Measurement Calculator/LandMeasurementCalculator.html"><span class="tagname">Beta</span> Land Measurement Tool</a></h5>
             </div>                
-        </div> -->
+        </div>
         <h5>Designed and Developed by Sourav Chhimpa</h5>
         <h6>Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank">@sourav-chhimpa</a></h6>
     </div>
