--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="calculator">
             <h2>Market Pro Calculators</h2>
             <div class="btn-container">
-                <a href="">
+                <a href="./MarketCal/Calculate-Total-Price.html">
                     <div class="calbtn">
                         <div>
                             <img src="https://img.icons8.com/color/800/calculate.png" alt="Calculator" loading="lazy">
@@ -73,7 +73,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="">
+                <a href="./MarketCal/Calculate-Price-Kg.html">
                     <div class="calbtn">
                         <div>
                             <img src="https://img.icons8.com/color/800/weight-kg.png" alt="Calculator" loading="lazy">
@@ -84,7 +84,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="">
+                <a href="./MarketCal/Calculate-Quantity.html">
                     <div class="calbtn">
                         <div>
                             <img src="https://img.icons8.com/color/800/scale.png" alt="Calculator" loading="lazy">
@@ -118,61 +118,7 @@
             <div id="HealthCal" class="btn-container">
             </div>
         </div>
-        <div id="totalprice" class="calculator">
-            <h2>Calculate Total Price</h2>
-            <form id="priceForm">
-                <div class="form-group">
-                    <label for="vegPrice">Price (₹/kg):</label>
-                    <input type="number" id="vegPrice" placeholder="Enter price per kg">
-                </div>
-                <div class="form-group">
-                    <label for="vegQtyKg">Quantity (kg):</label>
-                    <input type="number" id="vegQtyKg" placeholder="Enter quantity in kg">
-                    <label for="vegQtyG">Quantity (g):</label>
-                    <input type="number" id="vegQtyG" placeholder="Enter quantity in g">
-                </div>
-                <button type="button" onclick="calculateTotalPrice()">Calculate Total</button>
-            </form>
-            <div id="totalResult" class="result"></div>
-        </div>
-
-        <div id="priceperkg" class="calculator">
-            <h2>Calculate Price per Kg</h2>
-            <form id="perKgForm">
-                <div class="form-group">
-                    <label for="totalQtyKg">Total Quantity (kg):</label>
-                    <input type="number" id="totalQtyKg" placeholder="Enter total quantity in kg">
-                    <label for="totalQtyG">Total Quantity (g):</label>
-                    <input type="number" id="totalQtyG" placeholder="Enter total quantity in g">
-                </div>
-                <div class="form-group">
-                    <label for="totalPrice">Total Price (₹):</label>
-                    <input type="number" id="totalPrice" placeholder="Enter total price in ₹">
-                </div>
-                <button type="button" onclick="calculatePricePerKg()">Calculate Price per Kg</button>
-            </form>
-            <div id="perKgResult" class="result"></div>
-        </div>
-
-        <div id="Calquntity" class="calculator">
-            <div style="display: flex; justify-content: center; padding: 0;">
-                <h4 class="tagname" style="text-align: center; display: inline; padding: 2px 9px 2px 9px; color: orange; letter-spacing: 1px;">Trending</h4>
-            </div>
-            <h2>Calculate Quantity</h2>
-            <form id="quantityForm">
-                <div class="form-group">
-                    <label for="amountPerKg">Price (₹/kg):</label>
-                    <input type="number" id="amountPerKg" placeholder="Enter price per kg">
-                </div>
-                <div class="form-group">
-                    <label for="amountToSpend">Amount to Spend (₹):</label>
-                    <input type="number" id="amountToSpend" placeholder="Enter amount to spend">
-                </div>
-                <button type="button" onclick="calculateQuantity()">Calculate Quantity</button>
-            </form>
-            <div id="quantityResult" class="result"></div>
-        </div>
-        <div class="calculator">
+        <!-- <div class="calculator">
             <h2>Other Calculators</h2>
             <div>
                 <h5><a href="./Offers Cal/OffersCal.html"><span class="tagname">New</span> Discount Calculator</a></h5>
@@ -180,7 +126,7 @@
                 <h5><a href="./Recipe Cost Calculator/RecipeCostCalculator.html"><span class="tagname">Beta</span> Recipe Cost Calculator</a></h5>
                 <h5><a href="./Land Measurement Calculator/LandMeasurementCalculator.html"><span class="tagname">Beta</span> Land Measurement Tool</a></h5>
             </div>                
-        </div>
+        </div> -->
         <h5>Designed and Developed by Sourav Chhimpa</h5>
         <h6>Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank">@sourav-chhimpa</a></h6>
     </div>
