Loan Calculator Added and Bug Fixed

--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
             <div id="HealthCal" class="btn-container">
             </div>
         </div>
+        <div class="calculator">
+            <h2>Finance Calculators</h2>
+            <div id="FinanceCal" class="btn-container">
+            </div>
+        </div>
         <!-- <div class="calculator">
             <h2>Other Calculators</h2>
             <div>
