--- a/FinanceCal/InterestCal.html
+++ b/FinanceCal/InterestCal.html
@@ -59,7 +59,7 @@
         <div id="documentation" class="mb-6 p-4 bg-green-100 text-green-900 rounded-lg mt-4">
             <h2 class="text-xl font-semibold mb-2">Understanding the Simple Interest Calculation</h2>
             <p class="text-sm mb-2"><strong>Formula:</strong> The simple interest is calculated using the formula:</p>
-            <p class="text-sm mb-2"><strong>Simple Interest = Principal × Rate × Time</strong></p>
+            <p class="text-sm mb-2"><strong>Simple Interest = ( Principal × Rate × Time )/100</strong></p>
             <p class="text-sm mb-2"><strong>Where:</strong></p>
             <ul class="list-disc list-inside text-sm">
                 <li><strong>Principal:</strong> The initial amount of money invested or loaned.</li>
