UI and start working on the Home Improvement Calculator

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
-    <div class="calculator note">
+    <!-- <div class="calculator note">
         <h3>We're Building Something Amazing!</h3>
         <p>Thank you for visiting our website. We're currently under construction, working hard to create something truly special. Please check back soon for updates.</p>
-    </div>
+    </div> -->
     <div class="container">
         <header class="header">
             <h1 style="display: flex; justify-content: center; align-items: center;"><span><img style="width: 40px;" src="https://img.icons8.com/color/48/calculator--v1.png" alt="Logo" loading="lazy"></span> Veggie Smart</h1>
@@ -123,6 +123,11 @@
             <div id="FinanceCal" class="btn-container">
             </div>
         </div>
+        <!-- <div class="calculator">
+            <h2>Home Improvement Cal</h2>
+            <div id="FinanceCal" class="btn-container">
+            </div>
+        </div> -->
         <!-- <div class="calculator">
             <h2>Other Calculators</h2>
             <div>
